target/generated-sources/antlr4/XQParser.java
// Generated from XQParser.g4 by ANTLR 4.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XQParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		QUOTE=1, CLOSESQ=24, JOIN=29, ASSIGN=27, SATISFIES=30, DOUBLESLASH=4, 
		TXT=8, RETURN=12, STRINGCONST=38, SOME=28, CLOSECURL=35, DOC=2, CLOSEBRACKET=6, 
		ID=37, WS=36, EMPTY=31, COMMA=7, OR=16, SINGLESLASH=3, IN=13, EQUAL=25, 
		FOR=9, DOT=20, IS=14, CLOSETAG=33, WHERE=11, EQ=18, OPENBRACKET=5, OPENCURL=34, 
		OPENTAG=32, NOT=17, DOUBLEDOT=21, AT=22, STAR=19, AND=15, EQUALITY=26, 
		VARNAME=39, LET=10, OPENSQ=23;
	public static final String[] tokenNames = {
		"<INVALID>", "QUOTE", "DOC", "'/'", "'//'", "'('", "')'", "','", "'text()'", 
		"FOR", "LET", "WHERE", "RETURN", "IN", "IS", "AND", "OR", "NOT", "EQ", 
		"'*'", "'.'", "'..'", "'@'", "'['", "']'", "'='", "'=='", "':='", "SOME", 
		"JOIN", "SATISFIES", "EMPTY", "OPENTAG", "'>'", "'{'", "'}'", "WS", "ID", 
		"STRINGCONST", "VARNAME"
	};
	public static final int
		RULE_ap = 0, RULE_rp = 1, RULE_f = 2, RULE_forClause = 3, RULE_letClause = 4, 
		RULE_whereClause = 5, RULE_returnClause = 6, RULE_cond = 7, RULE_xqs = 8, 
		RULE_oxq = 9, RULE_xq = 10, RULE_list = 11, RULE_forJ = 12, RULE_path = 13, 
		RULE_condJ = 14, RULE_returnJ = 15;
	public static final String[] ruleNames = {
		"ap", "rp", "f", "forClause", "letClause", "whereClause", "returnClause", 
		"cond", "xqs", "oxq", "xq", "list", "forJ", "path", "condJ", "returnJ"
	};

	@Override
	public String getGrammarFileName() { return "XQParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XQParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ApContext extends ParserRuleContext {
		public ApContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ap; }
	 
		public ApContext() { }
		public void copyFrom(ApContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ApDoubleSlashContext extends ApContext {
		public Token FILENAME;
		public TerminalNode DOUBLESLASH() { return getToken(XQParser.DOUBLESLASH, 0); }
		public TerminalNode OPENBRACKET() { return getToken(XQParser.OPENBRACKET, 0); }
		public TerminalNode STRINGCONST() { return getToken(XQParser.STRINGCONST, 0); }
		public RpContext rp() {
			return getRuleContext(RpContext.class,0);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(XQParser.CLOSEBRACKET, 0); }
		public TerminalNode DOC() { return getToken(XQParser.DOC, 0); }
		public ApDoubleSlashContext(ApContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterApDoubleSlash(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitApDoubleSlash(this);
		}
	}
	public static class ApSlashContext extends ApContext {
		public Token FILENAME;
		public TerminalNode OPENBRACKET() { return getToken(XQParser.OPENBRACKET, 0); }
		public TerminalNode STRINGCONST() { return getToken(XQParser.STRINGCONST, 0); }
		public TerminalNode SINGLESLASH() { return getToken(XQParser.SINGLESLASH, 0); }
		public RpContext rp() {
			return getRuleContext(RpContext.class,0);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(XQParser.CLOSEBRACKET, 0); }
		public TerminalNode DOC() { return getToken(XQParser.DOC, 0); }
		public ApSlashContext(ApContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterApSlash(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitApSlash(this);
		}
	}

	public final ApContext ap() throws RecognitionException {
		ApContext _localctx = new ApContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ap);
		try {
			setState(44);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new ApSlashContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(32); match(DOC);
				setState(33); match(OPENBRACKET);
				setState(34); ((ApSlashContext)_localctx).FILENAME = match(STRINGCONST);
				setState(35); match(CLOSEBRACKET);
				setState(36); match(SINGLESLASH);
				setState(37); rp(0);
				}
				break;

			case 2:
				_localctx = new ApDoubleSlashContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(38); match(DOC);
				setState(39); match(OPENBRACKET);
				setState(40); ((ApDoubleSlashContext)_localctx).FILENAME = match(STRINGCONST);
				setState(41); match(CLOSEBRACKET);
				setState(42); match(DOUBLESLASH);
				setState(43); rp(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RpContext extends ParserRuleContext {
		public RpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rp; }
	 
		public RpContext() { }
		public void copyFrom(RpContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RpCurrContext extends RpContext {
		public TerminalNode DOT() { return getToken(XQParser.DOT, 0); }
		public RpCurrContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpCurr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpCurr(this);
		}
	}
	public static class RpSlashContext extends RpContext {
		public RpContext left;
		public RpContext right;
		public RpContext rp(int i) {
			return getRuleContext(RpContext.class,i);
		}
		public TerminalNode SINGLESLASH() { return getToken(XQParser.SINGLESLASH, 0); }
		public List<RpContext> rp() {
			return getRuleContexts(RpContext.class);
		}
		public RpSlashContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpSlash(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpSlash(this);
		}
	}
	public static class RpParentContext extends RpContext {
		public TerminalNode DOUBLEDOT() { return getToken(XQParser.DOUBLEDOT, 0); }
		public RpParentContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpParent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpParent(this);
		}
	}
	public static class RpTxtContext extends RpContext {
		public TerminalNode TXT() { return getToken(XQParser.TXT, 0); }
		public RpTxtContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpTxt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpTxt(this);
		}
	}
	public static class RpTagnameContext extends RpContext {
		public TerminalNode ID() { return getToken(XQParser.ID, 0); }
		public RpTagnameContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpTagname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpTagname(this);
		}
	}
	public static class RpStarContext extends RpContext {
		public TerminalNode STAR() { return getToken(XQParser.STAR, 0); }
		public RpStarContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpStar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpStar(this);
		}
	}
	public static class RpFilterContext extends RpContext {
		public FContext f() {
			return getRuleContext(FContext.class,0);
		}
		public TerminalNode CLOSESQ() { return getToken(XQParser.CLOSESQ, 0); }
		public RpContext rp() {
			return getRuleContext(RpContext.class,0);
		}
		public TerminalNode OPENSQ() { return getToken(XQParser.OPENSQ, 0); }
		public RpFilterContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpFilter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpFilter(this);
		}
	}
	public static class RpAttributeContext extends RpContext {
		public TerminalNode AT() { return getToken(XQParser.AT, 0); }
		public TerminalNode ID() { return getToken(XQParser.ID, 0); }
		public RpAttributeContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpAttribute(this);
		}
	}
	public static class RpBracketContext extends RpContext {
		public TerminalNode OPENBRACKET() { return getToken(XQParser.OPENBRACKET, 0); }
		public RpContext rp() {
			return getRuleContext(RpContext.class,0);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(XQParser.CLOSEBRACKET, 0); }
		public RpBracketContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpBracket(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpBracket(this);
		}
	}
	public static class RpCommaContext extends RpContext {
		public RpContext left;
		public RpContext right;
		public TerminalNode COMMA() { return getToken(XQParser.COMMA, 0); }
		public RpContext rp(int i) {
			return getRuleContext(RpContext.class,i);
		}
		public List<RpContext> rp() {
			return getRuleContexts(RpContext.class);
		}
		public RpCommaContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpComma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpComma(this);
		}
	}
	public static class RpDoubleSlashContext extends RpContext {
		public RpContext left;
		public RpContext right;
		public TerminalNode DOUBLESLASH() { return getToken(XQParser.DOUBLESLASH, 0); }
		public RpContext rp(int i) {
			return getRuleContext(RpContext.class,i);
		}
		public List<RpContext> rp() {
			return getRuleContexts(RpContext.class);
		}
		public RpDoubleSlashContext(RpContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterRpDoubleSlash(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitRpDoubleSlash(this);
		}
	}

	public final RpContext rp() throws RecognitionException {
		return rp(0);
	}

	private RpContext rp(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		RpContext _localctx = new RpContext(_ctx, _parentState);
		RpContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_rp, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			switch (_input.LA(1)) {
			case ID:
				{
				_localctx = new RpTagnameContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(47); match(ID);
				}
				break;
			case STAR:
				{
				_localctx = new RpStarContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(48); match(STAR);
				}
				break;
			case DOT:
				{
				_localctx = new RpCurrContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(49); match(DOT);
				}
				break;
			case DOUBLEDOT:
				{
				_localctx = new RpParentContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(50); match(DOUBLEDOT);
				}
				break;
			case TXT:
				{
				_localctx = new RpTxtContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(51); match(TXT);
				}
				break;
			case AT:
				{
				_localctx = new RpAttributeContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(52); match(AT);
				setState(53); match(ID);
				}
				break;
			case OPENBRACKET:
				{
				_localctx = new RpBracketContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(54); match(OPENBRACKET);
				setState(55); rp(0);
				setState(56); match(CLOSEBRACKET);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(76);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(74);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new RpSlashContext(new RpContext(_parentctx, _parentState));
						((RpSlashContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_rp);
						setState(60);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(61); match(SINGLESLASH);
						setState(62); ((RpSlashContext)_localctx).right = rp(5);
						}
						break;

					case 2:
						{
						_localctx = new RpDoubleSlashContext(new RpContext(_parentctx, _parentState));
						((RpDoubleSlashContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_rp);
						setState(63);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(64); match(DOUBLESLASH);
						setState(65); ((RpDoubleSlashContext)_localctx).right = rp(4);
						}
						break;

					case 3:
						{
						_localctx = new RpCommaContext(new RpContext(_parentctx, _parentState));
						((RpCommaContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_rp);
						setState(66);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(67); match(COMMA);
						setState(68); ((RpCommaContext)_localctx).right = rp(2);
						}
						break;

					case 4:
						{
						_localctx = new RpFilterContext(new RpContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_rp);
						setState(69);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(70); match(OPENSQ);
						setState(71); f(0);
						setState(72); match(CLOSESQ);
						}
						break;
					}
					} 
				}
				setState(78);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class FContext extends ParserRuleContext {
		public FContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f; }
	 
		public FContext() { }
		public void copyFrom(FContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FEqualContext extends FContext {
		public RpContext left;
		public RpContext right;
		public TerminalNode EQUAL() { return getToken(XQParser.EQUAL, 0); }
		public RpContext rp(int i) {
			return getRuleContext(RpContext.class,i);
		}
		public List<RpContext> rp() {
			return getRuleContexts(RpContext.class);
		}
		public TerminalNode EQ() { return getToken(XQParser.EQ, 0); }
		public FEqualContext(FContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterFEqual(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitFEqual(this);
		}
	}
	public static class FIsContext extends FContext {
		public RpContext left;
		public RpContext right;
		public TerminalNode IS() { return getToken(XQParser.IS, 0); }
		public RpContext rp(int i) {
			return getRuleContext(RpContext.class,i);
		}
		public List<RpContext> rp() {
			return getRuleContexts(RpContext.class);
		}
		public TerminalNode EQUALITY() { return getToken(XQParser.EQUALITY, 0); }
		public FIsContext(FContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterFIs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitFIs(this);
		}
	}
	public static class FNotContext extends FContext {
		public TerminalNode NOT() { return getToken(XQParser.NOT, 0); }
		public FContext f() {
			return getRuleContext(FContext.class,0);
		}
		public FNotContext(FContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterFNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitFNot(this);
		}
	}
	public static class FBracketContext extends FContext {
		public TerminalNode OPENBRACKET() { return getToken(XQParser.OPENBRACKET, 0); }
		public FContext f() {
			return getRuleContext(FContext.class,0);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(XQParser.CLOSEBRACKET, 0); }
		public FBracketContext(FContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterFBracket(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitFBracket(this);
		}
	}
	public static class FRpContext extends FContext {
		public RpContext rp() {
			return getRuleContext(RpContext.class,0);
		}
		public FRpContext(FContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterFRp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitFRp(this);
		}
	}
	public static class FOrContext extends FContext {
		public FContext left;
		public FContext right;
		public List<FContext> f() {
			return getRuleContexts(FContext.class);
		}
		public FContext f(int i) {
			return getRuleContext(FContext.class,i);
		}
		public TerminalNode OR() { return getToken(XQParser.OR, 0); }
		public FOrContext(FContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterFOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitFOr(this);
		}
	}
	public static class FAndContext extends FContext {
		public FContext left;
		public FContext right;
		public List<FContext> f() {
			return getRuleContexts(FContext.class);
		}
		public FContext f(int i) {
			return getRuleContext(FContext.class,i);
		}
		public TerminalNode AND() { return getToken(XQParser.AND, 0); }
		public FAndContext(FContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterFAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitFAnd(this);
		}
	}

	public final FContext f() throws RecognitionException {
		return f(0);
	}

	private FContext f(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		FContext _localctx = new FContext(_ctx, _parentState);
		FContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_f, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				_localctx = new FNotContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(80); match(NOT);
				setState(81); f(1);
				}
				break;

			case 2:
				{
				_localctx = new FRpContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(82); rp(0);
				}
				break;

			case 3:
				{
				_localctx = new FEqualContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(83); ((FEqualContext)_localctx).left = rp(0);
				setState(84); match(EQUAL);
				setState(85); ((FEqualContext)_localctx).right = rp(0);
				}
				break;

			case 4:
				{
				_localctx = new FEqualContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(87); ((FEqualContext)_localctx).left = rp(0);
				setState(88); match(EQ);
				setState(89); ((FEqualContext)_localctx).right = rp(0);
				}
				break;

			case 5:
				{
				_localctx = new FIsContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(91); ((FIsContext)_localctx).left = rp(0);
				setState(92); match(EQUALITY);
				setState(93); ((FIsContext)_localctx).right = rp(0);
				}
				break;

			case 6:
				{
				_localctx = new FIsContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(95); ((FIsContext)_localctx).left = rp(0);
				setState(96); match(IS);
				setState(97); ((FIsContext)_localctx).right = rp(0);
				}
				break;

			case 7:
				{
				_localctx = new FBracketContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(99); match(OPENBRACKET);
				setState(100); f(0);
				setState(101); match(CLOSEBRACKET);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(113);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(111);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new FAndContext(new FContext(_parentctx, _parentState));
						((FAndContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_f);
						setState(105);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(106); match(AND);
						setState(107); ((FAndContext)_localctx).right = f(4);
						}
						break;

					case 2:
						{
						_localctx = new FOrContext(new FContext(_parentctx, _parentState));
						((FOrContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_f);
						setState(108);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(109); match(OR);
						setState(110); ((FOrContext)_localctx).right = f(3);
						}
						break;
					}
					} 
				}
				setState(115);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ForClauseContext extends ParserRuleContext {
		public TerminalNode IN(int i) {
			return getToken(XQParser.IN, i);
		}
		public XqContext xq(int i) {
			return getRuleContext(XqContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(XQParser.COMMA); }
		public TerminalNode FOR() { return getToken(XQParser.FOR, 0); }
		public List<XqContext> xq() {
			return getRuleContexts(XqContext.class);
		}
		public TerminalNode VARNAME(int i) {
			return getToken(XQParser.VARNAME, i);
		}
		public List<TerminalNode> VARNAME() { return getTokens(XQParser.VARNAME); }
		public List<TerminalNode> IN() { return getTokens(XQParser.IN); }
		public TerminalNode COMMA(int i) {
			return getToken(XQParser.COMMA, i);
		}
		public ForClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).enterForClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XQParserListener ) ((XQParserListener)listener).exitForClause(this);
		}
	}

	public final ForClauseContext forClause() throws RecognitionException {
		ForClauseContext _localctx = new ForClauseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_forClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); match(FOR);
			setState(117); match(VARNAME);
			setState(118); match(IN);
			setState(119); xq(0);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(120); match(COMMA);
				setState(121); match(VARNAME);
				setState(122); match(IN);
				setState(123); xq(0);
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
